# triangles

./: .gitignore  CMakeLists.txt  README.md  triangles.cfg
source/: includes.hpp  main.cpp
source/classes/cfg/: cfg.cpp  cfg.hpp
source/classes/tri/: tri.cpp  tri.hpp
source/classes/win/: win.cpp  win.hpp
